--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.8",
+    "expo-speech-recognition": "^3.1.0",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -69,6 +70,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "24.10.0",
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.25.0",
