--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "tsx": "^4.20.6",
     "ws": "^8.18.0",
