--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "expo-web-browser": "~15.0.9",
     "express": "^5.0.1",
     "http-proxy-middleware": "^3.0.5",
+    "katex": "^0.16.28",
     "openai": "^6.16.0",
     "p-limit": "^7.2.0",
     "p-retry": "^7.1.1",
@@ -59,6 +60,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-reanimated": "~4.1.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
