Update via Antigravity

--- a/app.json
+++ b/app.json
@@ -38,7 +38,8 @@
           }
         }
       ],
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-asset"
     ],
     "experiments": {
       "reactCompiler": true
