--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.1",
     "expo": "^54.0.23",
+    "expo-asset": "~12.0.12",
     "expo-blur": "^15.0.7",
     "expo-camera": "^17.0.10",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.20",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.9",
     "expo-glass-effect": "~0.1.6",
     "expo-haptics": "~15.0.7",
