Updated via Antigravity

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "check:format": "prettier --check \"**/*.{js,ts,tsx,css,json}\"",
     "format": "prettier --write \"**/*.{js,ts,tsx,css,json}\"",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "sync": "node scripts/compileContent.js"
   },
   "dependencies": {
     "@expo-google-fonts/kalam": "^0.4.1",
@@ -80,6 +81,7 @@
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
+    "cheerio": "^1.2.0",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
